Sample App commit2 Added basic form

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -25,7 +25,10 @@
   <a routerLink="/product" routerLinkActive="active-link">Product</a> |
   <a routerLink="/inventory" routerLinkActive="active-link">Inventory</a> |
 </nav>
+
 <div>
   <router-outlet></router-outlet>
 </div>
+
+<app-product-form>l;</app-product-form>
 
