Sample App commit2 Added basic form in routing

--- a/src/app/product-form/product-form.component.html
+++ b/src/app/product-form/product-form.component.html
@@ -1,5 +1,5 @@
 <div class = "container">
-  <h1>Product Form</h1>
+  <h1>Product Form!!! Forms example linked to routing</h1>
   <form>
     <div class = "form-group">
       <label for = "productid">ID</label>
