--- a/src/app/product/product.component.html
+++ b/src/app/product/product.component.html
@@ -1,6 +1,9 @@
 <p>
 
-  <li>product1</li>
-  <li>product2</li>
+
+
+  <li><a routerLink="/productdetails" routerLinkActive="active-link">Product1</a></li>
+<li><a routerLink="/productdetails" routerLinkActive="active-link">Product2</a></li>
+
 
 </p>
