--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -30,4 +30,15 @@
   <router-outlet></router-outlet>
 </div>
 
+<h2>Usage of services in Angular2 </h2>
+
+<div>{{value}}</div>
+
+<h2>Start of Pagination: </h2>
+
+<ul>
+  <li *ngFor = "let item of collection | paginate: {
+            itemsPerPage: 5, currentPage: p }"> ... </li>
+</ul>
+<pagination-controls (pageChange) = "p = $event"></pagination-controls>
 
