Sample App Added third party control not working and simple service class usage

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -36,9 +36,9 @@
 
 <h2>Start of Pagination: </h2>
 
-<ul>
-  <li *ngFor = "let item of collection | paginate: {
-            itemsPerPage: 5, currentPage: p }"> ... </li>
-</ul>
-<pagination-controls (pageChange) = "p = $event"></pagination-controls>
+  <!--<ul>
+    <li *ngFor = "let item of collection | paginate: {
+              itemsPerPage: 5, currentPage: p }"> hello </li>
+  </ul>
+  <pagination-controls (pageChange) = "p = $event"></pagination-controls>-->
 
